<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/table1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_low"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/resultLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_6"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_7"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_8"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_9"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_10"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_11"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_12"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/result12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:id="@+id/table11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_tot"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/resultTot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_result"
                android:textAlignment="center" />
        </TableRow>


    </TableLayout>
</android.support.constraint.ConstraintLayout>